# friendly-enigma

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHEATSHEET.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INDEX.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE.md  blog_api.postman_collection.json  docker-compose.yml  init_db.sql  insert_posts.sql  package.json  start.bat  start.sh  tailwind.config.js  test.sh
.cargo/: config.toml
.github/workflows/: docker.yml
.trae/skills/: blog-operator.md
migrations/: 001_init.sql  002_add_upload_files.sql
src/: main.rs
src/db/: category_repository.rs  mod.rs  page_repository.rs  post_repository.rs  upload_repository.rs
src/handlers/: category_handler.rs  mod.rs  page_handler.rs  post_handler.rs  seo_handler.rs  upload_handler.rs  view_handler.rs
src/mcp/: handler.rs  models.rs
src/middleware/: api_key_auth.rs
src/models/: category.rs  mod.rs  page.rs  post.rs  upload.rs
src/services/: storage.rs
src/templates/: categories.html  index.html  mod.rs  page.html  post.html  posts.html
src/utils/: markdown.rs
static/: output.css  styles.css
