[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
askama = "0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
serde_repr = "0.1"
cuid2 = "0.1.4"
tracing = "0.1.44"
actix-files = "0.6.10"
opendal = { version = "0.52", features = ["services-s3", "services-fs"] }
actix-multipart = "0.7"
mime = "0.3"
infer = "0.16"
